--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,8 @@
         "venenatis",
         "veroeros",
         "viverra",
-        "volutpat"
+        "volutpat",
+        "webhostai",
+        "zapto"
     ]
 }
